精简jar包,以后该项目只有jdk相关测试,其他第三方jar包新建仓库去测试