@@ -4,6 +4,7 @@ import java.lang.ref.WeakReference;
 
 /**
  * <<实战java虚拟机>>4.3.4 弱引用-发现即回收,
+ * jvm 参数配置  -Xms190M -Xmx190M -XX:+PrintGCDetails
  */
 public class WeakRef {
     public static class User{
@@ -13,6 +14,7 @@ public class WeakRef {
             this.id=id;
             this.name=name;
         }
+        public Byte [] baa;
 
         @Override
         public String toString() {
@@ -20,13 +22,15 @@ public class WeakRef {
         }
     }
 
-    public static void main(String[] args) {
-        User u=new User(1,"geym");
+    public static void main(String[] args) throws InterruptedException {
+        User u=new User(1,"");
+        u.baa=new Byte[1024*1024*30];
         WeakReference<User> userWeakReference=new WeakReference<>(u);
-        u=null;
+//      u=null;
         System.out.println(userWeakReference.get());
         System.gc();
         //不管当前内存空间足够与否,都会回收他的内存
+        Thread.sleep(1000L);
         System.out.println("After GC:");
         System.out.println(userWeakReference.get()); //不用配置jvm内存参数直接输出null,
 
